src/features/rename/snapshots/texlab__features__rename__tests__command.snap
---
source: src/features/rename/tests.rs
assertion_line: 23
expression: edit
---
{
  "changes": {
    "[tmp]/bar.tex": [
      {
        "range": {
          "start": {
            "line": 0,
            "character": 1
          },
          "end": {
            "line": 0,
            "character": 4
          }
        },
        "newText": "qux"
      }
    ],
    "[tmp]/foo.tex": [
      {
        "range": {
          "start": {
            "line": 0,
            "character": 1
          },
          "end": {
            "line": 0,
            "character": 4
          }
        },
        "newText": "qux"
      }
    ]
  }
}
