src/features/rename/snapshots/texlab__features__rename__tests__entry.snap
---
source: src/features/rename/tests.rs
assertion_line: 51
expression: edit
---
{
  "changes": {
    "[tmp]/main.bib": [
      {
        "range": {
          "start": {
            "line": 0,
            "character": 9
          },
          "end": {
            "line": 0,
            "character": 12
          }
        },
        "newText": "qux"
      }
    ],
    "[tmp]/main.tex": [
      {
        "range": {
          "start": {
            "line": 1,
            "character": 6
          },
          "end": {
            "line": 1,
            "character": 9
          }
        },
        "newText": "qux"
      }
    ]
  }
}
