src/features/rename/snapshots/texlab__features__rename__tests__label.snap
---
source: src/features/rename/tests.rs
assertion_line: 99
expression: edit
---
{
  "changes": {
    "[tmp]/bar.tex": [
      {
        "range": {
          "start": {
            "line": 0,
            "character": 5
          },
          "end": {
            "line": 0,
            "character": 8
          }
        },
        "newText": "bar"
      }
    ],
    "[tmp]/foo.tex": [
      {
        "range": {
          "start": {
            "line": 0,
            "character": 7
          },
          "end": {
            "line": 0,
            "character": 10
          }
        },
        "newText": "bar"
      }
    ]
  }
}
